// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Photo component 1`] = `
<div>
  <div
    class="photo"
  >
    <img
      alt="placeholder"
      class="photo__image"
    />
    <p
      class="photo__description"
    />
  </div>
</div>
`;

exports[`Renders description prop with text 'Hello world' 1`] = `
<div>
  <div
    class="photo"
  >
    <img
      alt="placeholder"
      class="photo__image"
    />
    <p
      class="photo__description"
    >
      Hello world
    </p>
  </div>
</div>
`;

exports[`Renders imageSrc prop with test image 1`] = `
<div>
  <div
    class="photo"
  >
    <img
      alt="placeholder"
      class="photo__image"
      src="image.png"
    />
    <p
      class="photo__description"
    />
  </div>
</div>
`;
